--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "furniture-shop",
   "version": "0.1.0",
+  "homepage": "https://MegaVital.github.io/Furniture-Shop-app",
   "private": true,
   "dependencies": {
     "@mui/icons-material": "^5.8.3",
@@ -85,6 +86,5 @@
   "license": "ISC",
   "bugs": {
     "url": "https://github.com/MegaVital/Furniture-Shop-app/issues"
-  },
-  "homepage": "https://github.com/MegaVital/Furniture-Shop-app#readme"
+  }
 }
